erDiagram

    %% STRONG ENTITIES

    MEMBERS {
        int id PK "Primary Key"
        string email UK "Unique Key, NOT NULL"
        string full_name "NOT NULL"
        date date_of_birth "Optional"
        string gender "Optional - M/F/Other"
        string phone "Optional"
        timestamp created_at "Default CURRENT_TIMESTAMP"
    }
    
    TRAINERS {
        int id PK "Primary Key"
        string email UK "Unique Key, NOT NULL"
        string full_name "NOT NULL"
        string specialization "e.g., Strength Training, Cardio, Yoga"
        timestamp created_at "Default CURRENT_TIMESTAMP"
    }
    
    ADMINS {
        int id PK "Primary Key"
        string email UK "Unique Key"
        string full_name "NOT NULL"
    }
    
    ROOMS {
        int id PK "Primary Key"
        string room_name UK "Unique - e.g., Studio A, Gym Floor"
        int capacity "NOT NULL, CHECK capacity > 0"
    }
    
    EQUIPMENT {
        int id PK "Primary Key"
        string equipment_name "e.g., Treadmill, Dumbbells"
        int room_id FK "References ROOMS(id)"
        string status "operational | under_maintenance | broken"
    }
    
    CLASSES {
        int id PK "Primary Key"
        string class_name UK "Unique - e.g., Yoga 101, HIIT Cardio"
        text description "Optional class details"
        int default_capacity "Default 20"
    }
    
    INVOICES {
        int id PK "Primary Key"
        int member_id FK "References MEMBERS(id)"
        date invoice_date "NOT NULL"
        numeric total_amount "Computed from invoice_items"
        string status "pending | paid | cancelled | overdue"
        timestamp created_at "Default CURRENT_TIMESTAMP"
    }
    
    %% ------------------------------------------------------------------------
    %% WEAK ENTITIES
    
    FITNESS_GOALS {
        int id "Partial Key (not sufficient alone)"
        int member_id FK "Owner - References MEMBERS(id) - Part of PK (weak)"
        string goal_type "weight_loss | muscle_gain | endurance | flexibility"
        numeric target_value "e.g., 65.0 kg"
        date target_date "Goal deadline"
        boolean active "Default TRUE"
        timestamp created_at "Default CURRENT_TIMESTAMP"
    }
    
    HEALTH_METRICS {
        int id "Partial Key"
        int member_id FK "Owner - References MEMBERS(id) - Part of PK"
        string metric_type "weight | height | bmi | heart_rate | body_fat_pct"
        numeric value "NOT NULL"
        string unit "kg | cm | bpm | %"
        timestamp recorded_at "Default CURRENT_TIMESTAMP"
    }
    
    INVOICE_ITEMS {
        int id "Partial Key"
        int invoice_id FK "Owner - References INVOICES(id) - Part of PK"
        text description "e.g., Monthly Membership, PT Session"
        numeric amount "NOT NULL, CHECK amount >= 0"
    }
    
    %% ------------------------------------------------------------------------
    %% relationship entities

    TRAINER_AVAILABILITY {
        int id PK "Primary Key"
        int trainer_id FK "References TRAINERS(id)"
        tstzrange avail_range "PostgreSQL range type - start/end timestamp"
        string note "Optional - e.g., Preferred time slot"
    }
    
    PERSONAL_SESSIONS {
        int id PK "Primary Key"
        int member_id FK "References MEMBERS(id)"
        int trainer_id FK "References TRAINERS(id)"
        int room_id FK "References ROOMS(id)"
        tstzrange session_range "Session start/end time"
        string status "scheduled | completed | cancelled | no_show"
        timestamp created_at "Default CURRENT_TIMESTAMP"
    }
    
    CLASS_SESSIONS {
        int id PK "Primary Key"
        int class_id FK "References CLASSES(id)"
        int trainer_id FK "References TRAINERS(id)"
        int room_id FK "References ROOMS(id)"
        tstzrange session_range "Class start/end time"
        int capacity "Max participants, inherited from CLASSES"
        string status "scheduled | completed | cancelled"
    }
    
    CLASS_REGISTRATIONS {
        int id PK "Primary Key"
        int class_session_id FK "References CLASS_SESSIONS(id)"
        int member_id FK "References MEMBERS(id)"
        timestamp registered_at "Relationship attribute - when member registered"
    }
    
    PAYMENTS {
        int id PK "Primary Key"
        int invoice_id FK "References INVOICES(id)"
        numeric amount "NOT NULL, CHECK amount > 0"
        string payment_method "cash | credit_card | debit_card | bank_transfer"
        timestamp paid_at "Default CURRENT_TIMESTAMP"
    }
    
    EQUIPMENT_MAINTENANCE {
        int id PK "Primary Key"
        int equipment_id FK "References EQUIPMENT(id)"
        int reported_by_admin_id FK "References ADMINS(id)"
        text issue_description "NOT NULL"
        timestamp reported_at "Default CURRENT_TIMESTAMP"
        timestamp resolved_at "NULL until resolved"
    }
    


    %% ------------------------------------------------------------------------
    %% ------------------------------------------------------------------------
    %% MEMBER RELATIONSHIPS
    
    %% weak ERs
    
    MEMBERS ||--o{ FITNESS_GOALS : "HAS(1,N) - identifying relationship"
    
    MEMBERS ||--o{ HEALTH_METRICS : "LOGS(1,N) - multi-valued attribute as entity"
    
    MEMBERS ||--o{ PERSONAL_SESSIONS : "BOOKS(1,N) - partial participation"
    MEMBERS ||--o{ INVOICES : "RECEIVES(1,N) - partial"
    MEMBERS ||--o{ CLASS_REGISTRATIONS : "REGISTERS_FOR(1,N) - partial"
    
    %% ------------------------------------------------------------------------
    %% trainer relations
    
    TRAINERS ||--o{ TRAINER_AVAILABILITY : "SETS_AVAILABILITY(1,N) - total on availability"
    TRAINERS ||--o{ PERSONAL_SESSIONS : "CONDUCTS(1,N) - partial"
    TRAINERS ||--o{ CLASS_SESSIONS : "TEACHES(1,N) - partial"
    %% ------------------------------------------------------------------------
    %% ADMIN RELATIONS
    
    
    ADMINS ||--o{ EQUIPMENT_MAINTENANCE : "REPORTS(1,N) - partial participation"
    
    %% ------------------------------------------------------------------------
    %% room and equipment relations
    
    ROOMS ||--o{ EQUIPMENT : "CONTAINS(1,N) - partial on equipment"
    ROOMS ||--o{ PERSONAL_SESSIONS : "HOSTS_PT(1,N) - partial"
    ROOMS ||--o{ CLASS_SESSIONS : "HOSTS_CLASS(1,N) - partial"
    
    EQUIPMENT ||--o{ EQUIPMENT_MAINTENANCE : "HAS_MAINTENANCE(1,N) - partial"
    
    %% ------------------------------------------------------------------------
    %% class relations
    
    CLASSES ||--o{ CLASS_SESSIONS : "SCHEDULED_AS(1,N) - total on sessions"
    


    %% ------------------------------------------------------------------------
    %% invoice relationships
    
    
    %% weak er
    INVOICES ||--|| INVOICE_ITEMS : "CONTAINS(1,N) - total on items, weak entity"
    
    INVOICES ||--o| PAYMENTS : "PAID_BY(0,1) - partial on both sides"
    
    %% ------------------------------------------------------------------------
    %% many to many mapped to weak
    CLASS_SESSIONS ||--o{ CLASS_REGISTRATIONS : "HAS_REGISTRANTS(1,N)"